<resources>
    <string name="app_name">CanineConcierge</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="go_to_register_message">Don\'t have an account? <u>Join the pack!</u></string>
    <string name="go_to_packLeader_registration">or <u>apply</u> to be a pack leader</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="schedule_walk">Schedule a Walk</string>
    <string name="completed_walks">Completed Walks</string>
    <string name="upcoming_walks">Upcoming Walks</string>
    <string name="welcome_message">Your one-stop service center for dogs</string>
    <string name="schedule_welcome_message">Let\'s take a walk!</string>
    <string name="schedule_instruction">Select a date to view availability.</string>
    <string name="finish_schedule_walk">Schedule Walk</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="set_hours_instruction">Click a day to set available hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="packleader_portal">Pack Leader Portal</string>
    <string name="set_hours">Set Available Hours</string>
    <string name="save">Save</string>
    <string name="view_map">View Map</string>
    <string name="time_label">Time:</string>
    <string name="cancel_walk">Cancel Walk</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="pack_leader">Pack Leader:</string>
    <string name="distance">Distance:</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_walk_map">Map</string>
</resources>
