<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juniordesign.unleashedpotential.canineconcierge.PackLeaderSetHoursActivity"
    android:background="@drawable/main_background_blur" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="351dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/set_hours_instruction"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/monday" />

            <Button
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/tuesday" />

            <Button
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/wednesday" />

            <Button
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/thursday" />

            <Button
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/friday" />

            <Button
                android:id="@+id/saturday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/saturday" />

            <Button
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/sunday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/hour_selection"
                android:layout_width="match_parent"
                android:layout_height="343dp"
                android:background="#55ffffff" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/set_hours_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_hours_instruction"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/save_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#ccffffff"
        android:onClick="finishSetHours"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>
