<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juniordesign.unleashedpotential.canineconcierge.PackLeaderRegistrationSetHoursActivity"
    android:background="@drawable/registration_page"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:background="#55ffffff"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="133dp"
        android:id="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pack Leader Application"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="266dp"
        android:layout_height="296dp"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.508">

        <LinearLayout
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/monday" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/tuesday" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/wednesday" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/thursday" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/friday" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/saturday" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="#ccffffff"
                android:text="@string/sunday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/hour_selection"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="#55ffffff" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_hours_instruction"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-10dp"
        android:background="#ccffffff"
        android:onClick="finishPackLeaderRegistration"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
