<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juniordesign.unleashedpotential.canineconcierge.PackLeaderMainActivity"
    android:background="@drawable/landing_page_background">


    <Button
        android:id="@+id/go_to_set_hours"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="174dp"
        android:backgroundTint="#ccffffff"
        android:text="@string/set_hours"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <Button
        android:id="@+id/go_to_completed_walks"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ccffffff"
        android:text="@string/completed_walks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_set_hours"
        app:layout_constraintHorizontal_bias="0.529" />

    <Button
        android:id="@+id/go_to_upcoming_walks"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#ccffffff"
        android:text="@string/upcoming_walks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_completed_walks"
        app:layout_constraintHorizontal_bias="0.529" />

    <Button
        android:id="@+id/start_walk"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#ccffffff"
        android:text="Start Walk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/go_to_upcoming_walks" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/packleader_portal"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#ccffffff"
        android:text="Sign out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/start_walk" />

</android.support.constraint.ConstraintLayout>
